# PyDrive2

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  README.rst  index.html  objects.inv  pyproject.toml  searchindex.js  setup.py  tox.ini
.doctrees/: environment.pickle  filelist.doctree  filemanagement.doctree  fsspec.doctree  genindex.doctree  index.doctree  oauth.doctree  pydrive2.doctree  quickstart.doctree
.github/: release-drafter.yml
.github/workflows/: docs.yml  pre-commit.yml  publish.yml  test.yml
_sources/: filemanagement.rst.txt  fsspec.rst.txt  index.rst.txt  quickstart.rst.txt
_static/: documentation_options.js  pygments.css
docs/: README  README.md  conf.py  filelist.rst  filemanagement.rst  fsspec.rst  index.rst  oauth.rst  pydrive2.rst  quickstart.rst
examples/Upload-and-autoconvert-to-Google-Drive-Format-Example/: upload.py
filelist/: index.html
filemanagement/: index.html
fsspec/: index.html
genindex/: index.html
oauth/: index.html
py-modindex/: index.html
pydrive/: files.py
pydrive2/: apiattr.py  auth.py  auth_helpers.py  drive.py  files.py  fs.py  index.html  settings.py  storage.py
pydrive2/__pyinstaller/: test_hook-googleapiclient.py
pydrive2/fs/: spec.py
pydrive2/storage/: __init__.py
pydrive2/storage/redis/: __init__.py  storage.py
pydrive2/test/: README.rst  test_apiattr.py  test_drive.py  test_file.py  test_filelist.py  test_fs.py  test_oauth.py  test_oauth_custom.py  test_token_expiry.py  test_util.py
pydrive2/test/settings/: default.yaml  default_user.yaml  default_user_no_refresh.yaml  test_oauth_test_07.yaml  test_oauth_test_08.yaml  test_oauth_test_09.yaml  test_oauth_test_10.yaml
quickstart/: index.html
search/: index.html
sphinx/: README.md  conf.py
